--- a/html-pages/dashboard-page.html
+++ b/html-pages/dashboard-page.html
@@ -508,7 +508,7 @@
         <div class="main-container">
 
             <!-- Main Container Header text  -->
-            <h3 class="main-container-header">Dashboard</h3>
+            <h3 class="main-container-header">Dashboard one</h3>
 
             <!-- Important Comunications -->
             <div class="imp-comunication-container">
