--- a/html-pages/app-page.html
+++ b/html-pages/app-page.html
@@ -23,17 +23,10 @@
         <header class=" fixed-top">
             <!-- Navbar -->
             <nav class="navbar">
-                <a href="#" class="logo-container">
+                <a href="./dashboard-page.html" class="logo-container">
                     <div class="big-screen-logo">
-                        <img src="../styles/media/logos/Frame 39467.svg" alt="">
+                        <img src="../styles/media/logos/daycare-logo.svg" alt="day care logo">
                     </div>
-
-                    <div class="small-screen-logo">
-                        <img src="../styles/media/logos/Frame 38927.svg" alt="">
-
-                    </div>
-
-
                 </a>
 
                 <!-- Header Actions -->
