--- a/html-pages/dashboard-page.html
+++ b/html-pages/dashboard-page.html
@@ -14,6 +14,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/sass/main.css">
     <title>Document</title>
+    <script src="./dashboard.js" defer></script>
 </head>
 
 <body>
@@ -23,15 +24,8 @@
         <nav class="navbar">
             <a href="#" class="logo-container">
                 <div class="big-screen-logo">
-                    <img src="../styles/media/logos/Frame 39467.svg" alt="">
+                    <img src="../styles/media/logos/daycare-logo.svg" alt="day care logo">
                 </div>
-
-                <div class="small-screen-logo">
-                    <img src="../styles/media/logos/Frame 38927.svg" alt="">
-
-                </div>
-
-
             </a>
 
             <!-- Header Actions -->
@@ -47,6 +41,8 @@
                     <span class="text-rg-1 fw-semibold hide-text">Notification</span>
                     <div class="notification-badge">2</div>
                 </button>
+                
+                <!-- Notification Dropdown -->
                 <div class="notification-dropdown">
                     <div>
                         <span class="fw-bold  ">Notifications</span>
