--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div class="login-page-conatiner">
         <!-- Hero Image section -->
         <div class="hero-section">
-            <img src="./styles/media/images/Group 38564.jpg" alt="">
+            <img src="./styles/media/images/daycare-center-2.jpg" alt="">
         </div>
         <!-- Login Form -->
         <div class="login-form-container">
             <div class="login-form-wrap">
                 <div class="login-form-logo">
-                    <img src="./styles/media/logos/Group 37389.jpg" alt="">
+                    <img src="./styles/media/logos/daycare-logo.svg" alt="">
                 </div>
 
                 <form class="login-form">
