--- a/html-pages/dashboard-page.html
+++ b/html-pages/dashboard-page.html
@@ -41,7 +41,7 @@
                     <span class="text-rg-1 fw-semibold hide-text">Notification</span>
                     <div class="notification-badge">2</div>
                 </button>
-                
+
                 <!-- Notification Dropdown -->
                 <div class="notification-dropdown">
                     <div>
@@ -99,7 +99,7 @@
                     <button class="btn btn-secondary dropdown-toggle account-dropdown-btn" type="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="../styles/media/logos/Frame 38929.svg" alt="">
-                        <span class="text-rg-1">Mark Johnson</span>
+                        <span class="text-rg-1">John Doe</span>
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item bg-gray-lt6" href="#">View Profile</a></li>
@@ -134,7 +134,7 @@
 
             <div class="sub-nav-text">
 
-                <p class="fw-medium header-text">Welcome to <strong class="text-primary-dk-1"> Atlantas Best Day
+                <p class="fw-medium header-text">Welcome to <strong class="text-primary-dk-1"> Shirsha Best Day
                         care</strong></p>
                 <p class="text-gray-lt-1">Provider ID <strong class="fw-bold text-black">123456</strong></p>
 
@@ -316,7 +316,7 @@
                             </div>
                             <div class="need-support-wrap">
                                 <span>Email</span>
-                                <span>Support@decal.go.gov </span>
+                                <span>support@daycare.com </span>
                             </div>
 
                         </div>
@@ -490,7 +490,7 @@
                         </div>
                         <div class="need-support-wrap">
                             <span>Email</span>
-                            <span>Support@decal.go.gov </span>
+                            <span>support@daycare.com </span>
                         </div>
 
                     </div>
@@ -780,7 +780,7 @@
                                 <path
                                     d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2" />
                             </svg>
-                            <p class="text-gray-dk-2">Submit your application to receive the Pre-K Grant’s Benefit</p>
+                            <p class="text-gray-dk-2">Submit your application to receive the child care Benefits.</p>
                         </div>
                         <div class="resume-app-btn-container">
                             <button type="button" class="btn btn-primary app-btn ">Resume Application</button>
