--- a/html-pages/app-page.html
+++ b/html-pages/app-page.html
@@ -97,7 +97,7 @@
                     <div class=" account-dropdown active">
                         <button class="btn btn-secondary dropdown-toggle account-dropdown-btn" type="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="../styles/media/logos/Frame 38929.svg" alt="">
+                            <img src="../styles/media/logos/Frame 38929.svg" alt="jd logo image">
                             <span class="text-rg-1">John Doe</span>
                         </button>
                         <ul class="dropdown-menu">
